--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /integration/bazel/bazel-*
 *.log
 /node_modules/
+node_modules
 
 # CircleCI temporary file for cache key computation.
 # See `save_month_to_file` in `.circleci/config.yml`.
