--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.6.0",
+    "@graphql-tools/schema": "^9.0.18",
+    "@graphql-tools/utils": "^9.2.1",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
+    "graphql-tag": "^2.12.6",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
