Exposing a simple GraphQL API

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.12",
     "@apollo/server": "^4.6.0",
     "@graphql-tools/schema": "^9.0.18",
     "@graphql-tools/utils": "^9.2.1",
@@ -22,6 +23,7 @@
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "graphql-tag": "^2.12.6",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
